@@ -1,8 +1,8 @@
 Source: backup2l
 Section: admin
 Priority: optional
-Maintainer: Gundolf Kiefer <gundolfk@web.de>
-Standards-Version: 3.6.1
+Maintainer: Gundolf Kiefer <gundolf.kiefer@hs-augsburg.de>
+Standards-Version: 3.9.6
 
 Package: backup2l
 Architecture: all
@@ -20,13 +20,14 @@ Description: low-maintenance backup/restore tool for mountable media
  user can - if necessary - browse the files and extract archives manually.
  .
  backup2l features differential backups at multiple hierarchical levels.
- This allows to generate small incremental backups at short intervals while
- at the same time, the total number of archives only increases
- logarithmically with the number of backups since the last full backup.
+ This enables the efficient generation of small incremental backups at
+ short intervals while at the same time, the total number of archives only
+ increases logarithmically with the number of backups since the last full
+ backup.
  .
- An open driver architecture allows to use virtually any archiving
+ An open driver architecture enables the use of virtually any archiving
  program as a backend. Built-in drivers support .tar.gz, .tar.bz2, or .afioz
  files. Further user-defined drivers can be added.
  .
- An integrated split-and-collect function allows to comfortably transfer all
- or selected archives to a set of CDs or other removable media.
+ An integrated split-and-collect function allows one to comfortably transfer
+ all or selected archives to a set of CDs or other removable media.
